# SPCA

./: CMakeLists.txt  README.md  main.c
BST/: binary_search_tree.c  binary_search_tree.h
Bits/: bit_ops.h  bits_ops.c
function_pointer/: function_pointer.c  function_pointer.h
sorted_linked_list/: sorted_linked_list.c  sorted_linked_list.h
